manifests/base/homelab/nebula.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nebula
  namespace: homelab
  labels:
    app: nebula
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nebula
  template:
    metadata:
      namespace: homelab
      labels:
        app: nebula
    spec:
      containers:
        - name: nebula
          image: ghcr.io/lovelaze/nebula-sync:latest
