manifests/base/homelab/jellyfin.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jellyfin
  namespace: homelab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      hostNetwork: true     # replicates network_mode: host
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:10.11.0-rc5
          volumeMounts:
            - name: jellyfin-config-pvc
              mountPath: /config
            - name: tvshows-volume
              mountPath: /data/tvshows
            - name: movies-volume
              mountPath: /data/movies
            - name: personal-volume
              mountPath: /data/personal
            - name: studies-volume
              mountPath: /data/studies
            - name: dri
              mountPath: /dev/dri
            # - name: renderdri
            #   mountPath: /dev/dri/renderD128
      volumes:
        - name: tvshows-volume
          hostPath:
            path: /media/Media/Series
            type: Directory
        - name: movies-volume
          hostPath:
            path: /media/Media/Movies
            type: Directory
        - name: personal-volume
          hostPath:
            path: /media/Personal
            type: Directory
        - name: studies-volume
          hostPath:
            path: /media/Media/Studies
            type: Directory
        - name: dri
          hostPath:
            path: /dev/dri
            type: Directory
        # - name: renderdri
        #   hostPath:
        #     path: /dev/dri/renderD128
        #     type: Directory
  volumeClaimTemplates:
    - metadata:
        name: jellyfin-config-pvc
      spec: 
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 3Gi
        storageClassName: local-path-retain # Replace with your CSI driver’s StorageClass name
---
apiVersion: v1
kind: Service
metadata:
  namespace: homelab
  name: jellyfin
  labels:
    app: jellyfin
spec:
  selector:
    app: jellyfin
  ports:
    - protocol: TCP
      port: 8096
      targetPort: 8096
  clusterIP: None
