manifests/base/homelab/bazarr.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bazarr
  namespace: homelab
spec:
  replicas: 1
  serviceName: bazarr
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      containers:
        - name: bazarr
          image: lscr.io/linuxserver/bazarr:latest
          ports:
            - containerPort: 6767
          volumeMounts:
            - name: bazarr-config-pvc
              mountPath: /config
            - name: media
              mountPath: /Media
      volumes:
        - name: media
          hostPath:
            path: /media/Media
            type: Directory
  volumeClaimTemplates:
    - metadata:
        name: bazarr-config-pvc
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
        storageClassName: local-path-retain # Replace with your CSI driver’s StorageClass name
---
apiVersion: v1
kind: Service
metadata:
  namespace: homelab
  name: bazarr
  labels:
    app: bazarr
spec:
  selector:
    app: bazarr
  ports:
    - protocol: TCP
      port: 6767
      targetPort: 6767
  clusterIP: None

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr-ingress
  namespace: homelab
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: bazarr.rrk.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bazarr
                port:
                  number: 6767
