manifests/base/homelab/externalNameServices.yml
---
apiVersion: v1
kind: Service
metadata:
  namespace: homelab
  name: home-assistant-service
spec:
  type: ExternalName
  externalName: 192.168.1.3
  ports:
    - port: 8123 # Or the destination port
      targetPort: 8123

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant-ingress
  namespace: homelab
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: homelab-traefik-cors@kubernetescrd

spec:
  rules:
    - host: ha.rrk.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home-assistant-service
                port:
                  number: 8123

---
apiVersion: v1
kind: Service
metadata:
  name: pve-service
  namespace: homelab
spec:
  type: ExternalName
  externalName: 192.168.1.3
  ports:
    - port: 8006 # Or the destination port
      targetPort: 8006

# using ingressRoute traefik CRD as insecureSkipVerify is complicated in k8s native ingress object
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: homelab
  name: pve-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`pve.rrk.duckdns.org`)"

      kind: Rule
      services:
        - name: pve-service
          port: 8006
          scheme: https
          passHostHeader: true
          namespace: homelab
          serversTransport: pvetransport

---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-service
  namespace: homelab
spec:
  type: ExternalName
  externalName: 192.168.1.3
  ports:
    - port: 8096 # Or the destination port
      targetPort: 8096

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-ingress
  namespace: homelab
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"

spec:
  rules:
    - host: jellyfin.rrk.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin-service
                port:
                  number: 8096
---
apiVersion: v1
kind: Service
metadata:
  name: immich-service
  namespace: homelab
spec:
  type: ExternalName
  externalName: 192.168.1.3
  ports:
    - port: 2283 # Or the destination port
      targetPort: 2283

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-ingress
  namespace: homelab
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: homelab-traefik-cors@kubernetescrd

spec:
  rules:
    - host: immich.rrk.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: immich-service
                port:
                  number: 2283

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-cors
  namespace: homelab
spec:
  headers:
    accessControlAllowMethods:
      - GET
      - OPTIONS
      - PUT
    accessControlAllowHeaders:
      - "*"
    accessControlAllowOriginList:
      - homer.rrk.duckdns.org
      - hp.rrk.duckdns.org
      - immich.rrk.duckdns.org
    customResponseHeaders:
      Access-Control-Allow-Origin: homer.rrk.duckdns.org
---
apiVersion: v1
kind: Service
metadata:
  name: scrutiny-service
  namespace: homelab
spec:
  type: ExternalName
  externalName: 192.168.1.3
  ports:
    - port: 8180 # Or the destination port
      targetPort: 8180

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scrutiny-ingress
  namespace: homelab
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"

spec:
  rules:
    - host: scrutiny.rrk.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: scrutiny-service
                port:
                  number: 8180
---
apiVersion: v1
kind: Service
metadata:
  namespace: erpnext
  name: erpnext-service
spec:
  type: ExternalName
  externalName: 192.168.1.3
  ports:
    - port: 8083 # Or the destination port
      targetPort: 8083

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: erpnext-ingress
  namespace: erpnext
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: homelab-traefik-cors@kubernetescrd

spec:
  rules:
    - host: erpnext.rrk.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: erpnext-service
                port:
                  number: 8083
