manifests/base/homelab/homer.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homer
  namespace: homelab
  labels:
    app: homer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homer
  template:
    metadata:
      labels:
        app: homer
    spec:
      containers:
        - name: homer
          image: b4bz/homer
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: "/www/assets"
              readOnly: true
      volumes:
      # You set volumes at the Pod level, then mount them into containers inside that Pod
        - name: config
          configMap:
            # Provide the name of the ConfigMap you want to mount.
            name: homer-config
            # An array of keys from the ConfigMap to create as files
            items:
            - key: "config.yml"
              path: "config.yml"

---
apiVersion: v1
kind: Service
metadata:
  name: homer
  namespace: homelab
  labels:
    app: homer
spec:
  selector:
    app: homer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homer-ingress
  namespace: homelab
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: homer.rrk.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homer
                port:
                  number: 8080
