manifests/base/homelab/pihole.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pihole
  namespace: homelab
  labels:
    app: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      namespace: homelab
      labels:
        app: pihole
    spec:
      hostNetwork: true
      containers:
        - name: pihole
          image: pihole/pihole:latest
          volumeMounts:
            - name: pihole-config-pvc
              mountPath: /etc/pihole
  volumeClaimTemplates:
    - metadata:
        name: pihole-config-pvc
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 100Mi
        storageClassName: local-path-retain # Replace with your CSI driver’s StorageClass name
---
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: homelab
  labels:
    app: pihole
spec:
  selector:
    app: pihole
  ports:
    - protocol: TCP
      port: 8111
      targetPort: 8111
      name: web
  clusterIP: None
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-tcp
  namespace: homelab
  labels:
    app: pihole
spec:
  selector:
    app: pihole
  ports:
    - protocol: TCP
      port: 53
      targetPort: 53
      name: dnstcp
  clusterIP: None
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-udp
  namespace: homelab
  labels:
    app: pihole
spec:
  selector:
    app: pihole
  ports:
    - protocol: UDP
      port: 53
      targetPort: 53
      name: dns-udp
  clusterIP: None

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ingress
  namespace: homelab
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: pihole.rrk.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole
                port:
                  number: 8111
