manifests/base/homelab/prowlarr.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prowlarr
  namespace: homelab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
        - name: prowlarr
          image: linuxserver/prowlarr:latest
          ports:
            - containerPort: 9696
          volumeMounts:
            - name: prowlarr-config-pvc
              mountPath: /config
            - name: media
              mountPath: /Media
      volumes:
        - name: media
          hostPath:
            path: /media/Media
            type: Directory
  volumeClaimTemplates:
    - metadata:
        name: prowlarr-config-pvc
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
        storageClassName: local-path-retain # Replace with your CSI driver’s StorageClass name
---
apiVersion: v1
kind: Service
metadata:
  namespace: homelab
  name: prowlarr
  labels:
    app: prowlarr
spec:
  selector:
    app: prowlarr
  ports:
    - protocol: TCP
      port: 9696
      targetPort: 9696
  clusterIP: None

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr-ingress
  namespace: homelab
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: prowlarr.rrk.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  number: 9696
