manifests/base/homelab/qbitorrent.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: homelab
  name: qbitorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbitorrent
  template:
    metadata:
      labels:
        app: qbitorrent
    spec:
      containers:
        - name: qbitorrent
          image: ghcr.io/hotio/qbittorrent
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: qbitorrent-config-pvc
              mountPath: "/config"
            - name: media
              mountPath: /Media
      volumes:
        - name: media
          hostPath:
            path: /media/Media
            type: Directory
  volumeClaimTemplates:
    - metadata:
        name: qbitorrent-config-pvc
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 100Mi
        storageClassName: local-path-retain # Replace with your CSI driver’s StorageClass name

---
apiVersion: v1
kind: Service
metadata:
  name: qbitorrent
  labels:
    app: qbitorrent
spec:
  selector:
    app: qbitorrent
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  clusterIP: None

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbitorrent-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: qb.rrk.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbitorrent
                port:
                  number: 8080
