manifests/base/homelab/radarr.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: homelab
  name: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
        - name: radarr
          image: linuxserver/radarr:latest
          ports:
            - containerPort: 7878
          volumeMounts:
            - name: radarr-config-pvc
              mountPath: /config
            - name: media
              mountPath: /Media
      volumes:
        - name: media
          hostPath:
            path: /media/Media
            type: Directory
  volumeClaimTemplates:
    - metadata:
        name: radarr-config-pvc
      spec:     
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
        storageClassName: local-path-retain # Replace with your CSI driver’s StorageClass name
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: homelab
  labels:
    app: radarr
spec:
  selector:
    app: radarr
  ports:
    - protocol: TCP
      port: 7878
      targetPort: 7878
  clusterIP: None

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr-ingress
  namespace: homelab
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: radarr.rrk.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  number: 7878
