manifests/base/homelab/syncthing.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syncthing
  namespace: homelab
  labels:
    app: syncthing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: syncthing
  template:
    metadata:
      labels:
        app: syncthing
    spec:
      containers:
        - name: syncthing
          image: lscr.io/linuxserver/syncthing:latest
          volumeMounts:
            - name: config
              mountPath: /config
            - name: data
              mountPath: /data
            - name: personal
              mountPath: /media/Personal
            - name: paperless
              mountPath: /docker/config/paperless-ngx
          ports:
            - containerPort: 22000
              protocol: TCP
            - containerPort: 22000
              protocol: UDP
            - containerPort: 8384
              protocol: TCP
      hostname: syncthing # optional

      volumes:
        - name: config
          hostPath:
            path: /docker/config/syncthing
        - name: data
          hostPath:
            path: /media/Personal/Syncthing
        - name: personal
          hostPath:
            path: /media/Personal
        - name: paperless
          hostPath:
            path: /docker/config/paperless-ngx
---
apiVersion: v1
kind: Service
metadata:
  name: syncthing
  namespace: homelab

  labels:
    app: syncthing
spec:
  type: NodePort
  selector:
    app: syncthing
  ports:
    - name: tcp-22000
      protocol: TCP
      port: 22000
      targetPort: 22000
      nodePort: 32000
    - name: udp-22000
      protocol: UDP
      port: 22000
      targetPort: 22000
      nodePort: 32000
---
apiVersion: v1
kind: Service
metadata:
  namespace: homelab

  name: syncthing-webui
  labels:
    app: syncthing
spec:
  type: ClusterIP
  selector:
    app: syncthing
  ports:
    - name: syncthing-webui
      protocol: TCP
      port: 8384
      targetPort: 8384
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: homelab

  name: syncthing-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: syncthing.rrk.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: syncthing-webui
                port:
                  number: 8384
